# lokea

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.txt  TODOadminpage.txt  compileDebug.bat  compileWASM.bat  engine.js  engine.wasm  geometria.js  index.html  jsBindings.cpp  perlin.h  rasterizer.cpp  rasterizer.js  rasterizer.wasm  script.js  styles.css  webassembly.js  webassembly.wasm
backend/: package-lock.json  package.json  server.js
backend/api/: api.js  gameMaps.js  mapCreatorAPI.js
backend/sql/: database.js
core/: camera.cpp  camera.h  distantLight.cpp  distantLight.h  engine.cpp  engine.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.h  terrain.h
database/: adatbázis séma.txt  data.sql  ek_modell.dia  tables.sql
docs/kameraModell/: kamera.tex
docs/perlinZaj/: forrasok.bib  perlinZaj.bbl  perlinZaj.tex
docs/perspectiveMatrix/: matrix.tex
dokumentacio/edgeFunction/: edgeFunction.bbl  edgeFunction.tex  forrasok.bib
dokumentacio/kameraModell/: kamera.tex
dokumentacio/perspectiveMatrix/: matrix.tex
dokumentacio/sutherlandhodgman/: forrasok.bib  sutherlandHodgman.bbl  sutherlandHodgman.tex
frontend/css/: admin.css  jatek-valasztas.css  map-creator.css  test.css  testwebgl.css
frontend/html/: admin.html  game-choosing.html  index.html  jatek-valasztas.html  login.html  map-creator.html  test-equirectangular.html  test-map.html  test-terrain.html  test-webgl.html
frontend/javascript/: EquirectangularViewer.js  adminpage.js  equirectangular.js  equirectangular.wasm  equirectangular_debug.js  equirectangular_debug.wasm  equirectangular_debug.wasm.map  loginpage.js  map-creator.js  terrain.js  terrain.wasm  terrain_debug.js  terrain_debug.wasm  terrain_debug.wasm.map  test-equirectangular.js  test-map.js  test-terrain.js  test-webgl.js  testEquirectangularWASM.js  testEquirectangularWASM.wasm  testEquirectangularWASM_debug.js  testEquirectangularWASM_debug.wasm  testEquirectangularWASM_debug.wasm.map  testTerrainWASM.js  testTerrainWASM.wasm  testTerrainWASM_debug.wasm  testTerrainWASM_debug.wasm.map  testWebGLWASM.wasm  testWebGLWASM_debug.wasm  testWebGLWASM_debug.wasm.map
frontend/javascript/game/: game-choosing.js
frontend/javascript/libs/math/: mathUtils.js
frontend/javascript/libs/viewer/: CanvasInput.js  EquirectangularViewer.js  MapViewer.js  WASMViewerBase.js
frontend/javascript/libs/webassembly/equirectangular/: equirectangular.js  equirectangular.wasm  equirectangular_debug.js  equirectangular_debug.wasm.map
frontend/javascript/libs/webassembly/mapViewer/: mapViewer.js  mapViewer.wasm  mapViewer_debug.js  mapViewer_debug.wasm.map
frontend/javascript/libs/webassembly/terrain/: terrain.js  terrain.wasm  terrain_debug.js  terrain_debug.wasm.map
frontend/js/: CanvasInput.js  engine.js  engine.wasm  engine_debug.js  engine_debug.wasm  test-equirectangular.js  test-terrain.js  test-webgl.js  testEquirectangularWASM.js  testEquirectangularWASM.wasm  testEquirectangularWASM_debug.js  testEquirectangularWASM_debug.wasm  testEquirectangularWASM_debug.wasm.map  testTerrainWASM.js  testTerrainWASM.wasm  testTerrainWASM_debug.js  testTerrainWASM_debug.wasm  testTerrainWASM_debug.wasm.map  testWebGLWASM.js  testWebGLWASM.wasm  testWebGLWASM_debug.js  testWebGLWASM_debug.wasm  testWebGLWASM_debug.wasm.map
frontend/wasm/: engine.wasm  engine_debug.wasm
include/core/: camera.h  distantLight.h  engine.h  material.h  mesh.h  renderer.h  scene.h  shader.h  terrain.h  terrainEngine.h  texture.h  vertex.h
include/core/math/: mathUtils.h  vector.h
include/core/projection/: orthographicProjectionMatrix.h  perspectiveProjectionMatrix.h  projectionMatrix.h
include/core/rendering/: bindingSlots.h  renderer.h  shader.h  uniformBufferObject.h
include/core/resources/: material.h  mesh.h  texture.h  vertex.h
include/core/scene/: camera.h  scene.h
include/core/scene/camera/: camera.h  cameraConfig.h
include/equirectangular/: equirectangularEngine.h
include/mapViewer/: mapMarker.h  mapViewerEngine.h  mapViewerSettings.h
include/terrain/: terrain.h  terrainEngine.h
include/utils/: clipping.h  edgeFunction.h  fileUtils.h  fpsCounter.h  frameBuffer.h  mathUtils.h  perlin.h  shaderBuilder.h
resources/shaders/: UBOs.glsl  fragment.frag  gouraud.frag  gouraud.vert  noShader.frag  noShader.vert  perlinNoise.glsl  phong.frag  phong.vert  phongReflectionModel.glsl  texture.frag  texture.vert  vertex.vert
resources/shaders/gouraud/: gouraud.frag  gouraud.vert
resources/shaders/helpers/: UBOs.glsl  perlinNoise.glsl  phongReflectionModel.glsl
resources/shaders/noShader/: noShader.frag
resources/shaders/phong/: phong.frag
src/: testEquirectangular.cpp  testTerrain.cpp  testWebGL.cpp
src/core/: camera.cpp  distantLight.cpp  engine.cpp  engineBinding.cpp  equirectangularEngine.cpp  material.cpp  mesh.cpp  renderer.cpp  scene.cpp  shader.cpp  terrain.cpp  terrainEngine.cpp  texture.cpp
src/core/projection/: orthographicProjectionMatrix.cpp  perspectiveProjectionMatrix.cpp  projectionMatrix.cpp
src/core/rendering/: renderer.cpp  shader.cpp  uniformBufferObject.cpp
src/core/resources/: material.cpp  mesh.cpp  texture.cpp  textureLibrary.js
src/core/scene/: camera.cpp  distantLight.cpp  scene.cpp
src/core/scene/camera/: camera.cpp
src/equirectangular/: equirectangularBinding.cpp  equirectangularEngine.cpp  equirectangularLibrary.js
src/mapViewer/: mapMarker.cpp  mapViewerEngine.cpp  mapViewerEngineBinding.cpp
src/terrain/: terrain.cpp  terrainBinding.cpp  terrainEngine.cpp
src/utils/: clipping.cpp  fpsCounter.cpp  frameBuffer.cpp  pcgRand.cpp  perlin.cpp  shaderBuilder.cpp
utils/: clipping.cpp  clipping.h  frameBuffer.cpp  frameBuffer.h  mathUtils.h  pcgRand.cpp  pcgRand.h  perlin.h  perlin.js  random.js
